--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   flutter_bloc: ^9.1.0
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.17
+  auto_size_text: ^3.0.0
+  cached_network_image: ^3.4.1
+  colornames: ^0.2.0
+  readmore: ^3.0.0
+  carousel_slider_plus: ^7.1.0
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
