--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   readmore: ^3.0.0
   carousel_slider_plus: ^7.1.0
   smooth_page_indicator: ^1.2.1
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
+  connectivity_plus: ^6.1.3
+  get_it: ^8.0.3
+  injectable: ^2.5.0
+  build_runner: ^2.4.6
+  injectable_generator: ^2.7.0
 
 dev_dependencies:
   flutter_test:
